# logcraft-playground

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  scenario_reference.md
cli/: CMakeLists.txt
cli/src/: main.cpp
scenario/01_starter/: 01_hello_world.yaml  02_two_agents.yaml  03_custom_fields.yaml  04_multiple_outputs.yaml  05_phases.yaml  06_multiple_formats.yaml  07_incident_response.yaml
scenario/02_formats/: 01_web_access.yaml  02_structured.yaml  03_modern.yaml
scenario/03_services/: 01_ecommerce_api.yaml  02_database_writes.yaml  03_microservices.yaml  04_event_driven.yaml
scenario/04_failures/: 01_error_spike.yaml  02_cascading.yaml  03_memory_pressure.yaml  04_flapping_service.yaml  05_thundering_herd.yaml
scenario/05_advanced/: 01_daily_rhythm.yaml  02_user_sessions.yaml  03_noisy_pipeline.yaml  04_auto_cascade.yaml
scenario/06_benchmarks/: 01_high_throughput.yaml  02_wide_fleet.yaml
scenario/agents/: README.md  auth.yaml  db.yaml  nginx_v1.yaml  nginx_v2.yaml
scenario/agents/cache/: redis.yaml
scenario/agents/database/: mysql.yaml  postgres.yaml
scenario/agents/infrastructure/: cdn_edge.yaml  kubernetes.yaml  load_balancer.yaml
scenario/agents/messaging/: kafka_broker.yaml  rabbitmq.yaml
scenario/agents/search/: elasticsearch.yaml
scenario/agents/services/: notification.yaml
scenario/agents/simple/: minimal_api.yaml  minimal_db.yaml  minimal_web.yaml
